--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 .vscode/tasks.json
 .vscode/launch.json
 .vscode/settings.json
@@ -7,62 +6,4 @@ xcoupled_skew_tent.exe
 a.exe
 Ingest_Image
 .DS_Store
- 
-main.exe
-tool/random_sequence2.bin
-tool/random_sequence.bin
-tool/plane_unpermuted.jpg
-tool/plane_permuted.jpg
-tool/plane_encrypted.jpg
-tool/plane_decrypted.jpg
-tool/permute_sequence.bin
-tool/peppers_unpermuted.jpg
-tool/peppers_permuted.jpg
-tool/peppers_encrypted.jpg
-tool/peppers_decrypted.jpg
-tool/lena_unpermuted.jpg
-tool/lena_permuted.jpg
-tool/lena_encrypted.jpg
-tool/lena_decrypted.jpg
-tool/lax_unpermuted.jpg
-tool/lax_permuted.jpg
-tool/lax_encrypted2.jpg
-tool/lax_encrypted.jpg
-tool/lax_decrypted.jpg
-tool/lake_unpermuted.jpg
-tool/lake_permuted.jpg
-tool/lake_encrypted.jpg
-tool/lake_decrypted.jpg
-tool/camera_unpermuted.jpg
-tool/camera_permuted.jpg
-tool/camera_encrypted.jpg
-tool/camera_decrypted.jpg
-tool/bulldog_unpermuted.jpg
-tool/bulldog_permuted.jpg
-tool/bulldog_encrypted.jpg
-tool/bulldog_decrypted.jpg
-tool/baboon_unpermuted.jpg
-tool/baboon_permuted.jpg
-tool/baboon_encrypted2.jpg
-tool/baboon_encrypted.jpg
-tool/baboon_decrypted1.jpg
-tool/baboon_decrypted.jpg
-main
-main.cpp
-main.cpp
-output_image/baboon_decrypted.jpg
-output_image/baboon_encrypted.jpg
-output_image/baboon_permuted.jpg
-output_image/baboon_unpermuted.jpg
-output_image/bulldog_decrypted.jpg
-output_image/bulldog_encrypted.jpg
-output_image/bulldog_permuted.jpg
-output_image/bulldog_unpermuted.jpg
-output_image/camera_decrypted.jpg
-output_image/camera_encrypted.jpg
-output_image/camera_permuted.jpg
-output_image/camera_unpermuted.jpg
-output_image/encrypted_img.jpg
-output_image/decrypted_img.jpg
-*.jpg
-main.cpp
+*.exe
